Added game layout

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <main>
-        <img src="assets/logo.png" alt="Logo programu Tak to leciało!">
-        <button id="play-button">GRAJ</button>
+    <div class="background-image"></div>
+    <main class="menu">
+        <img class="menu__logo" src="assets/logo.png" alt="Logo programu Tak to leciało!">
+        <button class="play-button" onclick="location.href='game.html'">GRAJ</button>
     </main>
     <script src="script.js"></script>
 </body>
