--- a/game.html
+++ b/game.html
@@ -3,9 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tak to leciało</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/game.css">
 </head>
 <body>
-    xd
+    <div class="background-image"></div>
+    <main class="game-container">
+        <div class="game-container__cash-rewards">
+            <div class="game-container__cash-rewards__tile">100 000</div>
+            <div class="game-container__cash-rewards__tile">50 000</div>
+            <div class="game-container__cash-rewards__tile">30 000</div>
+            <div class="game-container__cash-rewards__tile">15 000</div>
+            <div class="game-container__cash-rewards__tile">10 000</div>
+            <div class="game-container__cash-rewards__tile">7 000</div>
+            <div class="game-container__cash-rewards__tile">5 000</div>
+            <div class="game-container__cash-rewards__tile">2 000</div>
+            <div class="game-container__cash-rewards__tile">1 000</div>
+            <div class="game-container__cash-rewards__tile">500</div>
+        </div>
+        <div class="game-container__categories">
+            <div class="game-container__categories__row">
+                <div class="game-container__categories__row__tile-special">HIT ZA 100 000</div>
+            </div>
+            <div class="game-container__categories__row">
+                <div class="game-container__categories__row__tile">LATA 70.</div>
+                <div class="game-container__categories__row__tile">SENTYMENTALNE</div>
+            </div>
+            <div class="game-container__categories__row">
+                <div class="game-container__categories__row__tile">LATA 70.</div>
+                <div class="game-container__categories__row__tile">SENTYMENTALNE</div>
+                <div class="game-container__categories__row__tile">LATA 70.</div>
+            </div>
+            <div class="game-container__categories__row">
+                <div class="game-container__categories__row__tile">LATA 70.</div>
+                <div class="game-container__categories__row__tile">SENTYMENTALNE</div>
+                <div class="game-container__categories__row__tile">LATA 70.</div>
+                <div class="game-container__categories__row__tile">LATA 70.</div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
